correct spacing.

--- a/com.getshop.client/apps/Hotelbooking/skin/Hotelbooking.css
+++ b/com.getshop.client/apps/Hotelbooking/skin/Hotelbooking.css
@@ -2,7 +2,7 @@
 .Hotelbooking .room_selection { width:100%; background-color:#FFF; padding: 5px;height: 30px; border: solid 1px; }
 .Hotelbooking .date_selection_room { border: solid 1px #b0bda4; margin:0px;padding: 3px;filter:alpha(opacity=2); opacity:2; height: 21px; width: 235px; color:#000; font-size: 14px; }
 .Hotelbooking .fa-calendar { margin: 3px; cursor:pointer; }
-.Hotelbooking .check_available_button, .Hotelbooking .continue_to_cart_button { color:#FFF; text-align: center; background-color:#d2684f; padding:3px; cursor: pointer; padding-top: 7px;  padding-bottom: 7px; }
+.Hotelbooking .check_available_button, .Hotelbooking .continue_to_cart_button { color:#FFF; text-align: center; background-color:#d2684f; padding:3px; cursor: pointer; height: 24px; line-height: 24px; }
 .Hotelbooking .continue_button { display:block;  width: 175px;text-align: center; background-color:#d2684f; padding:3px; cursor: pointer; padding-top: 7px;  padding-bottom: 7px; }
 .gsarea[area="body"] a { text-decoration: underline !important; }
 .Hotelbooking .title { text-transform: uppercase; }
